Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-64815

Sample applications don't show output on emulator screen

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • None
    • 5.10.0 RC
    • Device Creation
    • None

    Description

      Steps to reproduce:

      1. Create Qt Quick sample application
      2. Configure it for Boot2Qt emulator
      3. Launch

      Expected outcome:

      • Demo is started

      Actual outcome:

      • Nothing is shown on the emulator screen

      Workaround:

      • Comment out following line from the sample application main.cpp
        • QCoreApplication::setAttribute(Qt::AA_EnableHighDpiScaling);

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-64815
          # Subject Branch Project Status CR V

          Activity

            People

              portale Alessandro Portale
              sanurmen Sami Nurmenniemi
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes