Do not enable HighDpiScaling on emulator

See QTBUG-64815.

Change-Id: Id4a6f7059ef684393b05dfdb5c65740d129e6074
Reviewed-by: Sami Nurmenniemi <sami.nurmenniemi@qt.io>